Update initial files.

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
             </div>
             <div class="weather-disp loading">
                 <h3 class="city-name">Weather in </h3>
-                <h3 class="temp">°C</h3>
-                <img src="http://openweathermap.org/img/wn/50n@2x.png" alt="icon" class="weather-icon">
-                <div class="description"></div>
+                <h2 class="temp">°C</h2>
+                <div class="condition">
+                    <img src="http://openweathermap.org/img/wn/50n@2x.png" alt="icon" class="weather-icon">
+                    <div class="description"></div>
+                </div>
                 <div class="humidity">Humidity: %</div>
                 <div class="wind">Wind Speed:  km/h</div>
             </div>
