--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h3 class="city-name">Weather in </h3>
                 <h2 class="temp">°C</h2>
                 <div class="condition">
-                    <img src="http://openweathermap.org/img/wn/50n@2x.png" alt="icon" class="weather-icon">
+                    <img src="https://openweathermap.org/img/wn/50n@2x.png" alt="icon" class="weather-icon">
                     <div class="description"></div>
                 </div>
                 <div class="humidity">Humidity: %</div>
